--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ctrl/tinycolor": "^4.1.0",
     "@floating-ui/react": "^0.27.5",
     "@react-spring/web": "^9.7.5",
+    "ahooks": "^3.8.4",
     "antd": "^5.24.4",
+    "classnames": "^2.5.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-transition-group": "^4.4.5",
